# TSISA_RK3

./: CMakeLists.txt  Function.h  GeneticAlg.cpp  GeneticAlg.h  Mitrofanov_Dmitry_IU8-33_TSISA_LAB04.docx  Mitrofanov_Dmitry_IU8-33_TSISA_RK3.docx  RESULT.txt  main.cpp
